--- a/index.html
+++ b/index.html
@@ -100,13 +100,16 @@
         <h2 class="prezent" >Чем мы занимаемся</h2>
         <ul class="ul">
             <li class="prezent-link">
-               <img class="prezent-picture"  src="./img/img.jpg" alt="пишет текст на компютере" width="370" height="294"> 
+              <div class="perzent-box"> <img class="prezent-picture"  src="./img/img.jpg" alt="пишет текст на компютере" width="370" height="294"> 
+               <div  class="prezent-description"> <p class="prezent-text">Десктопные приложения</p></div></div>
             </li>
             <li class="prezent-link">
-               <img class="prezent-picture"  src="./img/img1.jpg" alt="смотрит на мобильную версию" width="370" height="294"> 
+               <div class="perzent-box"><img class="prezent-picture"  src="./img/img1.jpg" alt="смотрит на мобильную версию" width="370" height="294"> 
+               <div  class="prezent-description"> <p class="prezent-text">Мобильные приложения</p></div></div>
             </li>
             <li class="prezent-link">
-               <img class="prezent-picture"  src="./img/img2.jpg" alt="подберает цвет на планшете" width="370" height="294"> 
+               <div class="perzent-box"><img class="prezent-picture"  src="./img/img2.jpg" alt="подберает цвет на планшете" width="370" height="294"> 
+               <div  class="prezent-description"> <p class="prezent-text">Дизайнерские решения</p></div></div>
             </li>
         </ul>
     </div>
