ховер на карточках

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <nav class="nav">
             <div class="logo-box"><a class="logo " href="./index.html" >Web<span class="logo-studio">Studio</span></a></div>
             <ul class="ul">
-                <li>
-                   <a class="btn-menu link" href="./index.html">Студия</a> 
+                <li class="list-item">
+                   <a class="btn-menu link pagge" href="./index.html">Студия</a> 
                 </li>
                 <li>
                    <a class="btn-menu link" href="./portfolio.html">Портфолио</a> 
