--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
                    <a class="btn-menu link" href="./index.html">Студия</a> 
                 </li>
                 <li>
-                   <a class="btn-menu link" href="./portfolio.html">Портфолио</a> 
+                   <a class="btn-menu link pagge" href="./portfolio.html">Портфолио</a> 
                 </li><li>
                    <a class="btn-menu link" href="http://1">Контакты</a> 
                 </li>
