--- a/portfolio.html
+++ b/portfolio.html
@@ -63,55 +63,87 @@
                             </div>
                             <div class="card">
                             <h3 class="gallery-job"> Технокряк </h3>
-                            
                             <p class="gallery-menu">Веб сайт</p>
                             </div></a>
                         </li> 
                         <li class="foto-gallery">
-                         <a class="foto-link" href=""><img src="./img/poster.jpg" alt="Постер" width="370" height="294">
+                         <div class="foto-gallery-box">
+                             <div class="foto-gallery-box"><a class="foto-link" href=""><img src="./img/poster.jpg" alt="Постер" width="370" height="294">
+                                <div class="foto-link-text"><p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
+                            </div>
                             <div class="card">
                             <p class="gallery-job"> Постер New Orlean vs Golden Star </p>
                             <p class="gallery-menu">Дизайн</p>
                             </div></a>
                         </li>    
-                         <li class="foto-gallery"><a class="foto-link" href=""><img src="./img/restoran.jpg" alt="Ресторан" width="370" height="294">
+                         <li class="foto-gallery">
+                             <div class="foto-gallery-box"><a class="foto-link" href=""><img src="./img/restoran.jpg" alt="Ресторан" width="370" height="294">
+                                <div class="foto-link-text"><p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
+                            </div>
                            <div class="card">
                             <p class="gallery-job"> Ресторан Seafood </p>
                             <p class="gallery-menu">Приложение</p>
                             </div></a>
                         </li>  
                          <li class="foto-gallery">
-                             <a class="foto-link" href=""><img src="./img/project_prime.jpg" alt="Проект" width="370" height="294">
+                             <div class="foto-gallery-box">
+                                 <div class="foto-gallery-box"><a class="foto-link" href=""><img src="./img/project_prime.jpg" alt="Проект" width="370" height="294">
+                                    <div class="foto-link-text"><p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
+                            </div>
                             <div class="card">
                             <p class="gallery-job"> Проект Prime </p>
                             <p class="gallery-menu">Маркетинг</p>
                             </div></a>
                         </li>  
-                         <li class="foto-gallery"><a class="foto-link" href=""><img src="./img/boxes.jpg" alt="Коробка" width="370" height="294">
+                         <li class="foto-gallery">
+                             <div class="foto-gallery-box"><a class="foto-link" href=""><img src="./img/boxes.jpg" alt="Коробка" width="370" height="294">
+                                <div class="foto-link-text"><p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
+                            </div>
                             <div class="card">
                             <p class="gallery-job"> Проект Boxes </p>
                             <p class="gallery-menu">Приложение</p>
                             </div></a>
                         </li>  
-                         <li class="foto-gallery"><a class="foto-link" href=""><img src="./img/inspiration_has_no_borders.jpg" alt="Монітор" width="370" height="294">
+                         <li class="foto-gallery">
+                             <div class="foto-gallery-box">
+                                 <div class="foto-gallery-box"><a class="foto-link" href=""><img src="./img/inspiration_has_no_borders.jpg" alt="Монітор" width="370" height="294">
+                                    <div class="foto-link-text"><p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
+                            </div>
                             <div class="card">
                             <p class="gallery-job"> Inspiration has no Borders </p>
                             <p class="gallery-menu">Веб-сайт</p>
                             </div></a>
                         </li>  
-                         <li class="foto-gallery"><a class="foto-link" href=""><img src="./img/limited_edition.jpg" alt="Книга" width="370" height="294">
+                         <li class="foto-gallery">
+                             <div class="foto-gallery-box"><a class="foto-link" href=""><img src="./img/limited_edition.jpg" alt="Книга" width="370" height="294">
+                                <div class="foto-link-text"><p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
+                            </div>
                             <div class="card">
                             <p class="gallery-job"> Издание Limited Edition </p>
                             <p class="gallery-menu">Дизайн</p>
                             </div></a>
                         </li>  
-                         <li class="foto-gallery"><a class="foto-link" href=""><img src="./img/lab.jpg" alt="Ярлик" width="370" height="294">
+                         <li class="foto-gallery">
+                             <div class="foto-gallery-box"><a class="foto-link" href=""><img src="./img/lab.jpg" alt="Ярлик" width="370" height="294">
+                                <div class="foto-link-text"><p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
+                            </div>
                             <div class="card">
                             <p class="gallery-job"> Проект LAB </p>
                             <p class="gallery-menu">Маркетинг</p>
                             </div></a>
                         </li>  
-                         <li class="foto-gallery"><a class="foto-link" href=""><img src="./img/growing_business.jpg" alt="Ноутбук" width="370" height="294">
+                         <li class="foto-gallery">
+                             <div class="foto-gallery-box"><a class="foto-link" href=""><img src="./img/growing_business.jpg" alt="Ноутбук" width="370" height="294">
+                                <div class="foto-link-text"><p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
+                            </div>
                             <div class="card">
                             <p class="gallery-job"> Growing Business </p>
                             <p class="gallery-menu">Приложение</p>
