проблема з фото галарі

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <h1 class="hero-text">Эффективные решения <br> для вашего бизнеса</h1>
             <button data-modal-open class="hero-button" type="button">Заказать услугу</button>
             <div class="backdrop is-hidden" data-modal><div class="modal"><button data-modal-close class="btn-modal">
-               <a href=""> <svg class="btn-modal-pic">
+               <a class="modal-link" href=""> <svg class="btn-modal-pic">
                     <use class="modal-icon" href="./img/icons.svg#close-black">
                     </use>
                 </svg></a>
