--- a/portfolio.html
+++ b/portfolio.html
@@ -57,11 +57,11 @@
                 <div class="container"> -->
                  <ul class="gallery ul ">
                        <li class="foto-gallery">
-                            <a class="foto-link" href=""><div class="foto-link-box"><img src="./img/tehnokrak.jpg" alt="Веб-сайт" width="370" height="294">
+                            <a class="foto-link" href=""><div class="foto-link-box"><img class="foto-link-img" src="./img/tehnokrak.jpg" alt="Веб-сайт" width="370" height="294">
                             <div class="foto-link-text"><p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                             </div></div>
                             <div class="card">
-                            <h3 class="gallery-job"> Технокряк </h3>
+                            <p class="gallery-job"> Технокряк </p>
                             <p class="gallery-menu">Веб сайт</p>
                             </div></a>
                         </li> 
