--- a/index.html
+++ b/index.html
@@ -428,6 +428,14 @@
                        </a>
                     </li>
                  </ul></div>
+        <div>
+            <h3 class="footer-link">Подпишитесь на рассылку</h3>
+        </div>
+        <div class="letter">
+            <label for="user_email">Email</label>
+  <input type="email" name="email" id="user_email" />
+            <button class="btn-footer">Подписаться</button>
+        </div>
         
       </div>
     </footer>
