--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
                        </a>
                     </li>
                  </ul></div>
-        <div>
+        <!-- <div>
             <h3 class="footer-link">Подпишитесь на рассылку</h3>
         </div>
         <div class="letter">
@@ -436,7 +436,7 @@
   <input type="email" name="email" id="user_email" />
             <button class="btn-footer">Подписаться</button>
         </div>
-        
+         -->
       </div>
     </footer>
   </div>
